--- a/index.html
+++ b/index.html
@@ -3,35 +3,35 @@
 <html>
 
 <head>
-  <!--Metadatos | Metadata-->
-  <meta charset="utf-8" />
-  <meta name="author" content="SiegBoss" />
-  <meta name="description" content="Portafolio de SiegBoss" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!--Titulo | Title-->
-  <title>Snake</title>
-  <!--Icono | Icon-->
-  <link rel="icon" type="image/x-icon" href="images/logo_willy.png" />
-  <!--Enlazar CSS Estilo | Link CSS Style-->
-  <link rel="stylesheet" type="text/css" href="style/solar_system.css" />
+    <!--Metadatos | Metadata-->
+    <meta charset="utf-8" />
+    <meta name="author" content="SiegBoss" />
+    <meta name="description" content="Portafolio de SiegBoss" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--Titulo | Title-->
+    <title>Sistema Solar</title>
+    <!--Icono | Icon-->
+    <link rel="icon" type="image/x-icon" href="images/logo_willy.png" />
+    <!--Enlazar CSS Estilo | Link CSS Style-->
+    <link rel="stylesheet" type="text/css" href="style/solar_system.css" />
 </head>
 
 <body>
 
-  <!-- Contenedor Principal | Main Container-->
-  <div class="main">
+    <!-- Contenedor Principal | Main Container-->
+    <div class="main">
 
-    <div id="sun">
-      <img src="assets/sun.svg" alt="Sun" />
+        <div id="sun">
+            <img src="assets/sun.svg" alt="Sun" />
+        </div>
+
+        <div id="earth">
+            <img src="assets/earth.svg" alt="Earth" />
+        </div>
+
     </div>
-
-    <div id="earth">
-      <img src="assets/earth.svg" alt="Earth" />
-    </div>
-
-  </div>
-  <!--Enlazar al script | Link to script-->
-  <script src="scripts/solar_system.js"></script>
+    <!--Enlazar al script | Link to script-->
+    <script src="scripts/solar_system.js"></script>
 </body>
 
 </html>
