--- a/index.html
+++ b/index.html
@@ -25,8 +25,36 @@
             <img src="assets/sun.svg" alt="Sun" />
         </div>
 
+        <div id="mercury">
+            <img src="assets/mercury.svg" alt="Mercury" />
+        </div>
+
+        <div id="venus">
+            <img src="assets/venus.svg" alt="Venus" />
+        </div>
+
         <div id="earth">
             <img src="assets/earth.svg" alt="Earth" />
+        </div>
+
+        <div id="mars">
+            <img src="assets/mars.svg" alt="Mars" />
+        </div>
+
+        <div id="jupiter">
+            <img src="assets/jupiter.svg" alt="Jupiter" />
+        </div>
+        
+        <div id="saturn">
+            <img src="assets/saturn.svg" alt="Saturn" />
+        </div>
+
+        <div id="uranus">
+            <img src="assets/uranus.svg" alt="Uranus" />
+        </div>
+
+        <div id="neptune">
+            <img src="assets/neptune.svg" alt="Neptune" />
         </div>
 
     </div>
