--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             <img src="assets/mars.svg" alt="Mars" />
         </div>
 
+        <div id="asteroids">
+            <img src="assets/asteroids.svg" alt="Asteroids" />
+
+        </div>
+
         <div id="jupiter">
             <img src="assets/jupiter.svg" alt="Jupiter" />
         </div>
