--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Icono | Icon-->
     <link rel="icon" type="image/x-icon" href="images/logo_willy.png" />
     <!--Enlazar CSS Estilo | Link CSS Style-->
-    <link rel="stylesheet" type="text/css" href="style/solar_system.css" />
+    <link rel="stylesheet" type="text/css" href="./style/index.css" />
 </head>
 
 <body>
@@ -63,8 +63,7 @@
         </div>
 
     </div>
-    <!--Enlazar al script | Link to script-->
-    <script src="scripts/solar_system.js"></script>
+
 </body>
 
 </html>
